--- a/thongtin/lienlac.html
+++ b/thongtin/lienlac.html
@@ -10,6 +10,8 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="../CSS/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../CSS/index.css">
+  <link rel="shortcut icon" href="/Images/ielts_winwin.png" type="image/x-icon">
+
   <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v16.0" nonce="7ZifhicM"></script>
 </head>
