--- a/thongtin/tailieu.html
+++ b/thongtin/tailieu.html
@@ -10,6 +10,8 @@
     <title>Ielts WinWin</title>
 
     <link rel="stylesheet" href="../CSS/bootstrap.min.css">
+    <link rel="shortcut icon" href="/Images/ielts_winwin.png" type="image/x-icon">
+
     
 
     
