--- a/trangchu.html
+++ b/trangchu.html
@@ -10,6 +10,8 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="./CSS/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./CSS/index.css">
+  <link rel="shortcut icon" href="/Images/ielts_winwin.png" type="image/x-icon">
+
 </head>
 <body>
   <header>
