--- a/thongtin/lienlac.html
+++ b/thongtin/lienlac.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="../CSS/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../CSS/index.css">
-  <link rel="shortcut icon" href="/Images/ielts_winwin.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../Images/ielts_winwin.png" type="image/x-icon">
 
   <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v16.0" nonce="7ZifhicM"></script>
@@ -39,7 +39,7 @@
             </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="../HthongtinTML/winwinkids.html" style="margin-right: 40px; font-size: larger">WinWin Kids</a>
+                <a class="nav-link" href="../thongtin/winwinkids.html" style="margin-right: 40px; font-size: larger">WinWin Kids</a>
             </li>
             
             <li class="nav-item">
