--- a/thongtin/tailieu.html
+++ b/thongtin/tailieu.html
@@ -10,7 +10,7 @@
     <title>Ielts WinWin</title>
 
     <link rel="stylesheet" href="../CSS/bootstrap.min.css">
-    <link rel="shortcut icon" href="/Images/ielts_winwin.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../Images/ielts_winwin.png" type="image/x-icon">
 
     
 
