--- a/thongtin/winwinkids.html
+++ b/thongtin/winwinkids.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS v5.2.1 -->
-    <link rel="shortcut icon" href="/Images/ielts_winwin.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../Images/ielts_winwin.png" type="image/x-icon">
     <link href="../CSS/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/index.css">
 </head>
