--- a/trangchu.html
+++ b/trangchu.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="./CSS/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./CSS/index.css">
-  <link rel="shortcut icon" href="/Images/ielts_winwin.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./Images/ielts_winwin.png" type="image/x-icon">
 
 </head>
 <body>
