update_moi_nhat4

--- a/thongtin/danhgia.html
+++ b/thongtin/danhgia.html
@@ -43,7 +43,7 @@
             </li>
             
             <li class="nav-item">
-              <a class="nav-link" style="font-size: larger" href="../thongtin/lienlac.html">Liên lạc</a>
+              <a class="nav-link" style="font-size: larger" href="../thongtin/danhgia.html">Đánh giá</a>
             </li>
 
 
@@ -57,7 +57,7 @@
     </nav>
   </header>
   <main>
-    <center><h1>Các bài đánh giá của chúng tôi</h1></center> 
+    <center><h1>Các bài đánh giá của học viên nhà WinWin</h1></center> 
     <hr class="featurette-divider">
     
     <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpete.tri12%2Fposts%2Fpfbid021UQARVHHvvm62aCdW67Vr1htjzTtfZCUZGP52afRRL26FsPLMJESHtiRUqCs8eQxl&show_text=true&width=500" width="500" height="303" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
