--- a/thongtin/winwinkids.html
+++ b/thongtin/winwinkids.html
@@ -45,7 +45,7 @@
                             <a class="nav-link" href="../thongtin/winwinkids.html" style="margin-right: 40px; font-size: larger">WinWin Kids</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" style="font-size: larger" href="../thongtin/lienlac.html">Liên lạc</a>
+                            <a class="nav-link" style="font-size: larger" href="../thongtin/danhgia.html">Đánh giá</a>
                         </li>
 
 
@@ -60,10 +60,7 @@
     </header>
     <main>
      <center>  
-        <h1>Reviews</h1>
-        <hr>
-        <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FWinwinEnglishhouse%2Fvideos%2F662571858781010%2F&show_text=false&width=267&t=0" width="700" height="900" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
-
+      <img src="../Images/chi_tiet_khoa_hoc.jpg" style="width: 100%; height: auto;" alt="">
     <hr>
   
         <p style="font-size: 50px;">
