--- a/trangchu.html
+++ b/trangchu.html
@@ -27,7 +27,6 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="./trangchu.html" style="margin-right:40px; font-size: larger;">Trang chủ</a>
             </li>
-
             <li class="nav-item">
               <a class="nav-link" href="./thongtin/tailieu.html" style="margin-right: 40px; font-size: larger">Tài liệu</a>
             </li>
@@ -38,7 +37,7 @@
               <a class="nav-link" href="./thongtin/winwinkids.html" style="margin-right: 40px; font-size: larger">WinWin Kids</a>
           </li>
             <li class="nav-item">
-              <a class="nav-link" style="font-size: larger" href="./thongtin/lienlac.html"  >Liên lạc</a>
+              <a class="nav-link" style="font-size: larger" href="./thongtin/danhgia.html"  >Đánh giá</a>
             </li>
 
 
