--- a/thongtin/lotrinh.html
+++ b/thongtin/lotrinh.html
@@ -40,7 +40,7 @@
           </li>
            
             <li class="nav-item">
-              <a class="nav-link" style="font-size: larger" href="../thongtin/lienlac.html">Liên lạc</a>
+              <a class="nav-link" style="font-size: larger" href="../thongtin/danhgia.html">Đánh giá</a>
             </li>
 
 
