--- a/thongtin/danhgia.html
+++ b/thongtin/danhgia.html
@@ -63,7 +63,7 @@
     <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpete.tri12%2Fposts%2Fpfbid021UQARVHHvvm62aCdW67Vr1htjzTtfZCUZGP52afRRL26FsPLMJESHtiRUqCs8eQxl&show_text=true&width=500" width="500" height="303" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
     <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FKukaiiii%2Fposts%2Fpfbid0u6HdXt8BXKhZxAmpZym3L6j7GoNDukhdfnVJw35iHQ9xwJhPF1bMWBXDgFYArDRMl&show_text=true&width=500" width="500" height="265" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
     <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Falannanguyen22026%2Fposts%2Fpfbid02pcFrAsZXoiys7sWNDidqTwvaY3WCN3tBj7hcU6UTNZu3yqmu7EMdh15vi6sUcWgYl&show_text=true&width=500" width="500" height="271" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-     <center><a href="https://www.facebook.com/ieltswinwin/reviews" style="text-decoration: none;"><h2>Xem nhiều hơn<img src="/Images/right-arrow.png" alt=""> </h2></a>
+     <center><a href="https://www.facebook.com/ieltswinwin/reviews" style="text-decoration: none;"><h2>Xem nhiều hơn<img src="../Images/right-arrow.png" alt=""> </h2></a>
 </center> 
     
   </main>
