--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light " style="background-color: rgb(169, 235, 183);">
       <div class="container">
-        <a class="navbar-brand" href="./trangchu.html"><img class="hinh1" src="./Images/ielts_winwin.png" alt="Ielts Win Win"></a>
+        <a class="navbar-brand" href="./index.html"><img class="hinh1" src="./Images/ielts_winwin.png" alt="Ielts Win Win"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./trangchu.html" style="margin-right:40px; font-size: larger;">Trang chủ</a>
+              <a class="nav-link active" aria-current="page" href="./index.html" style="margin-right:40px; font-size: larger;">Trang chủ</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./thongtin/tailieu.html" style="margin-right: 40px; font-size: larger">Tài liệu</a>
