--- a/thongtin/winwinkids.html
+++ b/thongtin/winwinkids.html
@@ -96,17 +96,17 @@
     <div class="container" style="font-size: larger; ">
       
       <div class="row">
-        <div class="col-6 col-md-4">           <p> <img src="./Images/phone-call.png" alt=""> Hotline: 085 301 8788 </p>
+        <div class="col-6 col-md-4">           <p> <img src="../Images/phone-call.png" alt=""> Hotline: 0853 018 788 </p>
         </div>
-        <div class="col-6 col-md-4">           <p> <img src="./Images/zalo.png" alt="">Zalo: 096 543 9239</p>
+        <div class="col-6 col-md-4">           <p> <img src="../Images/zalo.png" alt="">Zalo: 0387 373 143</p>
         </div>
-        <div class="col-6 col-md-4">        <p> <img src="./Images/gmail.png" alt=""> ieltswinwin06@gmail.com </p>
+        <div class="col-6 col-md-4">        <p> <img src="../Images/gmail.png" alt=""> ieltswinwin06@gmail.com </p>
         </div>
       </div>
       <div class="row">
-        <div class="col-6"><p style="margin-left: 70px;"> <img src="./Images/google-maps.png" alt="">118 Nguyễn Xuân Khoát, P. Tân Thành, Q. Tân Phú,TP.HCM </p>
+        <div class="col-6"><p style="margin-left: 70px;"> <img src="../Images/google-maps.png" alt="">118 Nguyễn Xuân Khoát, P. Tân Thành, Q. Tân Phú,TP.HCM </p>
         </div>
-        <div class="col-6"><p style="margin-left: 70px;"><img src="./Images/facebook.png" alt="">Facebook: <a href="https://www.facebook.com/ieltswinwin" style="text-decoration: none;"> 𝐈𝐄𝐋𝐓𝐒 𝐖𝐢𝐧𝐖𝐢𝐧</a> </p>
+        <div class="col-6"><p style="margin-left: 70px;"><img src="../Images/facebook.png" alt="">Facebook: <a href="https://www.facebook.com/ieltswinwin" style="text-decoration: none;"> 𝐈𝐄𝐋𝐓𝐒 𝐖𝐢𝐧𝐖𝐢𝐧</a> </p>
           <p class="float-end"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50"
             fill="currentColor" class="bi bi-arrow-bar-up" viewBox="0 0 16 16">
             <path fill-rule="evenodd"
