update_ALL_N_Lan

--- a/thongtin/tailieu.html
+++ b/thongtin/tailieu.html
@@ -431,9 +431,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-6"><p style="margin-left: 70px;"> <img src="../Images/google-maps.png" alt="">118 Nguyễn Xuân Khoát, P. Tân Thành, Q. Tân Phú,TP.HCM </p>
+      <div class="col-6"><p> <img src="../Images/google-maps.png" alt="">118 Nguyễn Xuân Khoát, P. Tân Thành, Q. Tân Phú,TP.HCM </p>
       </div>
-      <div class="col-6"><p style="margin-left: 70px;"><img src="../Images/facebook.png" alt="">Facebook: <a href="https://www.facebook.com/ieltswinwin" style="text-decoration: none;"> 𝐈𝐄𝐋𝐓𝐒 𝐖𝐢𝐧𝐖𝐢𝐧</a> </p>
+      <div class="col-6"><p><img src="../Images/facebook.png" alt="">Facebook: <a href="https://www.facebook.com/ieltswinwin" style="text-decoration: none;"> 𝐈𝐄𝐋𝐓𝐒 𝐖𝐢𝐧𝐖𝐢𝐧</a> </p>
         <p class="float-end"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50"
           fill="currentColor" class="bi bi-arrow-bar-up" viewBox="0 0 16 16">
           <path fill-rule="evenodd"
