--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           </div>
           <div class="col" style="font-size: larger; ">
             <strong>
-              <p style=" padding-top: 200px;">Đối với những học viên đang có
+              <p>Đối với những học viên đang có
                 nhu cầu tìm hiểu và sở hữu cho mình tấm
                 bằng 𝗜𝗘𝗟𝗧𝗦 thì hãy nhanh chân lên ngay thôi bởi những ưu đãi giảm giá 𝟓 - 𝟏𝟎% sẽ
                 được lần lượt áp dụng vào tháng 2 năm 2023 đó !!! <br> <br>
@@ -161,9 +161,11 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-6"><p> <img src="./Images/google-maps.png" alt="">118 Nguyễn Xuân Khoát, P. Tân Thành, Q. Tân Phú,TP.HCM </p>
+        <div class="col-6 col-md-4"><p> <img src="./Images/google-maps.png" alt="">118 Nguyễn Xuân Khoát, P. Tân Thành, <br> Q. Tân Phú,TP.HCM </p>
         </div>
-        <div class="col-6"><p"><img src="./Images/facebook.png" alt="">Facebook: <a href="https://www.facebook.com/ieltswinwin" style="text-decoration: none;"> 𝐈𝐄𝐋𝐓𝐒 𝐖𝐢𝐧𝐖𝐢𝐧</a> </p>
+        <div class="col-6 col-md-4">
+        </div>
+        <div class="col-6 col-md-4"><p"><img src="./Images/facebook.png" alt="">Facebook: <a href="https://www.facebook.com/ieltswinwin" style="text-decoration: none;"> 𝐈𝐄𝐋𝐓𝐒 𝐖𝐢𝐧𝐖𝐢𝐧</a> </p>
           <p class="float-end"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50"
             fill="currentColor" class="bi bi-arrow-bar-up" viewBox="0 0 16 16">
             <path fill-rule="evenodd"
